Mon Dec 14 17:04:14 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/socket/lib/socket.rb: use safe navigation operator.
	  [fix GH-1142] Patch by @mlarraz
	* lib/drb/extservm.rb: ditto.
	* lib/net/http.rb: ditto.
	* lib/net/http/response.rb: ditto.
	* lib/scanf.rb: ditto.
	* lib/uri/generic.rb: ditto.

Mon Dec 14 17:03:05 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* bootstraptest/runner.rb: use safe navigation operator.
	  [fix GH-1142] Patch by @mlarraz
	* test/openssl/test_pair.rb: ditto.
	* test/ruby/test_econv.rb: ditto.
	* test/ruby/test_settracefunc.rb: ditto.
	* test/thread/test_queue.rb: ditto.

Mon Dec 14 14:33:35 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/xmlrpc.rb: added documentation for parser details.
	  [ci skip][fix GH-1124] Patch by @jrafanie

Mon Dec 14 11:46:52 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* enum.c: fix a typo in documentation.
	  [ci skip][fix GH-1140] Patch by @jutaz
	* io.c: ditto.
	* iseq.c: ditto.
	* numeric.c: ditto.
	* process.c: ditto.
	* string.c: ditto.
	* vm_trace.c: ditto.

Mon Dec 14 11:41:59 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/cgi.rb: fix a typo in documentation.
	  [ci skip][fix GH-1140] Patch by @jutaz

Mon Dec 14 11:31:00 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* compile.c: fix typos.
	  [ci skip][fix GH-1140] Patch by @jutaz
	* dir.c: ditto.
	* gc.c: ditto.
	* io.c: ditto.
	* node.h: ditto.
	* thread_pthread.c: ditto.
	* vm_insnhelper.c: ditto.
	* vsnprintf.c: ditto.

Mon Dec 14 11:27:01 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* enc/iso_2022_jp.h: fix typos.
	  [ci skip][fix GH-1140] Patch by @jutaz
	* enc/utf_16_32.h: ditto.
	* enc/utf_7.h: ditto.

Mon Dec 14 11:25:57 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* benchmark/bm_app_aobench.rb: fix typos.
	  [ci skip][fix GH-1140] Patch by @jutaz
	* benchmark/bm_vm_thread_pipe.rb: ditto.

Sun Dec 13 23:46:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
