@@ -1,0 +1,10 @@
+#include "regenc.h"
+/* dummy for unsupported, non-ascii-based encoding */
+ENC_DUMMY("EBCDIC-US");
+
+/* we start with just defining a single EBCDIC encoding,
+ * hopefully the most widely used one.
+ * 
+ * See http://www.iana.org/assignments/character-sets/character-sets.xhtml
+ *     http://tools.ietf.org/html/rfc1345
+ */
